--- a/full-stack/javaScript/hairday/package.json
+++ b/full-stack/javaScript/hairday/package.json
@@ -4,7 +4,7 @@
   "author": "Anderson Breno",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack serve",
+    "dev": "webpack server",
     "server": "json-server --watch server.json --port 3333"
   },
   "dependencies": {
